--- a/index.html
+++ b/index.html
@@ -196,6 +196,26 @@
                 </div>
             </section>
 
+            <section class="credit">
+                <div ">
+                    <h3 style="display: flex; align-items: center; 
+                    justify-content: center; padding-bottom: 30px; font-size: 35px;">Our Work</h3>
+                </div>
+                <div class="our-work-img">
+                    <div class="work-detail">
+                        <img  style="width: 250px;height: 250px;" src="/images/work-1.jpg" alt="">
+                    </div>
+                    <div class="work-detail">
+                        <img  style="width: 250px;height: 250px;"src="/images/work-2.jpg" alt="">
+                    </div>
+                    <div class="work-detail">
+                        <img style="width: 250px;height: 250px;" src="/images/work-3.jpg" alt="">
+                    </div>
+                    <div class="work-detail">
+                        <img  style="width: 250px;height: 250px;"src="/images/work-4.jpg" alt="">
+                    </div>
+                </div>
+            </section>
 
             <section>
                 <div class="sponspors">
@@ -224,18 +244,11 @@
                         <div class="item">
 
                         </div>
-
-
                     </div>
                 </div>
             </section>
-
-
-
         </div>
     </main>
-
-
     <footer class="footer">
         <div class="container">
             <div class="copyright">
