--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment Tow</title>
+    <title>G3 Architects</title>
+    <link rel="icon" type="image/x-icon" href="/images/icons/home.png">
+
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Work+Sans&display=swap"
         rel="stylesheet">
-
-    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
