--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
                 </div>
             </section>
 
+             <!-- Extra section added here -->
+
             <section class="credit">
                 <div ">
                     <h3 style="display: flex; align-items: center; 
@@ -216,7 +218,7 @@
                     </div>
                 </div>
             </section>
-
+            <!-- End Extra section  -->
             <section>
                 <div class="sponspors">
                     <div class="title">
