--- a/index.html
+++ b/index.html
@@ -205,16 +205,16 @@
                 </div>
                 <div class="our-work-img">
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/work-1.jpg" alt="extra-section-img">
+                        <img  style="width: 250px;height: 250px;" src="/images/owork1.jpg" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/work-2.jpg" alt="extra-section-img">
+                        <img  style="width: 250px;height: 250px;" src="/images/owork2.jpg" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img style="width: 250px;height: 250px;" src="/images/work-3.jpg" alt="extra-section-img">
+                        <img style="width: 250px;height: 250px;" src="/images/owork3.jpg" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/work-4.jpg" alt="extra-section-img">
+                        <img  style="width: 250px;height: 250px;" src="/images/owork4.jpg" alt="extra-section-img">
                     </div>
                 </div>
             </section>
