--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Work+Sans&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -205,16 +204,16 @@
                 </div>
                 <div class="our-work-img">
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/owork1.jpg" alt="extra-section-img">
+                        <img src="/images/owork1.png" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/owork2.jpg" alt="extra-section-img">
+                        <img src="/images/owork2.png" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img style="width: 250px;height: 250px;" src="/images/owork3.jpg" alt="extra-section-img">
+                        <img src="/images/owork3.png" alt="extra-section-img">
                     </div>
                     <div class="work-detail">
-                        <img  style="width: 250px;height: 250px;" src="/images/owork4.jpg" alt="extra-section-img">
+                        <img src="/images/owork4.png" alt="extra-section-img">
                     </div>
                 </div>
             </section>
