--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="icon" type="image/x-icon" href="/images/icons/home.png">
+    <link rel="icon" type="image/x-icon" href="/images/icons/home-button.png">
 
 
 
